WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164605
Incorrect release log message emitted when waiting/not waiting for the WebProcess continue a load
https://bugs.webkit.org/show_bug.cgi?id=164605
Summary
Incorrect release log message emitted when waiting/not waiting for the WebPro...
Daniel Bates
Reported
2016-11-10 11:51:31 PST
Currently the release log messages emitted in NetworkResourceLoader::didReceiveResponse() are inverted with respect to whether we are waiting for the WebProcess to send message NetworkResourceLoader::ContinueDidReceiveResponse. We emit a release log message of the form "didReceiveResponse: Should wait for message from WebContent process ..." when we are not waiting for the WebProcess and emit a message of the form "didReceiveResponse: Should not wait for message from WebContent process" when we are waiting on the WebProcess. We should invert these messages.
Attachments
Patch
(3.37 KB, patch)
2016-11-10 11:52 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2016-11-10 11:52:45 PST
Created
attachment 294393
[details]
Patch
WebKit Commit Bot
Comment 2
2016-11-12 21:53:40 PST
Comment on
attachment 294393
[details]
Patch Clearing flags on attachment: 294393 Committed
r208665
: <
http://trac.webkit.org/changeset/208665
>
WebKit Commit Bot
Comment 3
2016-11-12 21:53:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug